--- a/src/data/levels/002_Cartridge/004_Locating the graphics/chat/en.yml
+++ b/src/data/levels/002_Cartridge/004_Locating the graphics/chat/en.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - now, the graphics 👾
-  - 📚  create a ```javascript chr()``` method that returns an `Uint8Array` with them
+  - 📚  create a ```javascript chr()``` method that returns an `Uint8Array` containing them
   - graphics are right after the program, but remember they're optional!
   - if the header says that the game uses <CHR-RAM> instead of <CHR-ROM>, just return a ```javascript new Uint8Array(8192)```
   responses: []
