--- a/src/data/levels/003_CPU/000_New CPU/chat/en.yml
+++ b/src/data/levels/003_CPU/000_New CPU/chat/en.yml
@@ -4,7 +4,7 @@ main:
   - 📚  create a file somewhere for the CPU code 💻
   - its default export should be an empty class
   - then, import that file from 📄  ~/code/index.js~
-  - and add a "CPU" key (pointing to that class) to the exported object
+  - and add a `CPU` key (pointing to that class) to the exported object
   responses:
   - where should I put the file? [where]
 
