--- a/src/data/levels/003_CPU/018_Execute (2-2)/chat/es.yml
+++ b/src/data/levels/003_CPU/018_Execute (2-2)/chat/es.yml
@@ -22,7 +22,7 @@ cycles:
 accuracy:
   messages:
   - porque es una tarea compleja 🥵
-  - y MUY compleja para gente sin conocimientos previos en emulación
+  - y puede ser especialmente complicada para gente sin conocimientos previos en emulación
   - existen juegos "difíciles de emular" que demandan precisión para funcionar
   - pero la mayoría de los otros simplemente funciona bien, así que no lo necesitaremos de todas formas
   responses:
