--- a/src/data/levels/002_Cartridge/000_Using JS modules/chat/en.yml
+++ b/src/data/levels/002_Cartridge/000_Using JS modules/chat/en.yml
@@ -47,7 +47,7 @@ exercise:
   - 📚  create a file in 📄  ~/code/Cartridge.js~
   - its default export should be an empty class
   - then, import that file from 📄  ~/code/index.js~
-  - and export an object literal with only one key ("Cartridge") pointing to that class
+  - and export an object literal with only one key (`Cartridge`) pointing to that class
   - |-
     your ~index.js~ file should look like this:
       ```javascript
