--- a/src/data/levels/002_Cartridge/003_Locating the program/chat/en.yml
+++ b/src/data/levels/002_Cartridge/003_Locating the program/chat/en.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - we need to access the program code easily 💻
-  - 📚  create a ```javascript prg()``` method that returns an `Uint8Array` with it
+  - 📚  create a ```javascript prg()``` method that returns an `Uint8Array` containing it
   - the code is right after the 16-byte header, but remember that you might have to skip 512 bytes if the header says so
   responses:
   - how can I cut the bytes? ✂️ [cut]
@@ -10,7 +10,7 @@ main:
 cut:
   messages:
   - all arrays have a `slice(start, end)` method 🍕
-  - it cuts the array from `start` to `end`-1
+  - it extracts a subarray from `start` to `end`-1
   - "i.e. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` returns ```javascript [\"b\", \"c\"]```"
   - (it doesn't include the element at index 3, "d")
   responses:
