--- a/src/data/levels/002_Cartridge/003_Locating the program/chat/es.yml
+++ b/src/data/levels/002_Cartridge/003_Locating the program/chat/es.yml
@@ -10,7 +10,7 @@ main:
 cut:
   messages:
   - todos los arrays tienen un método `slice(start, end)` 🍕
-  - recorta el array de `start` a `end`-1
+  - extrae un sub-array de `start` a `end`-1
   - "p. ej. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` retorna ```javascript [\"b\", \"c\"]```"
   - (no incluye el elemento del índice 3, "d")
   responses:
