--- a/src/data/levels/003_CPU/015_Addressing modes (1-2)/chat/en.yml
+++ b/src/data/levels/003_CPU/015_Addressing modes (1-2)/chat/en.yml
@@ -14,7 +14,7 @@ explain:
   messages:
   - yeah
   - you can see every addressing mode has an <input> and an <output>
-  - ⬅️  the <input> is the argument (what follows the opcode, remember?)
+  - ⬅️  the <input> is the operation's argument (what follows the opcode, remember?)
   - in `JMP ($4080)` the <input> would be $4080
   - ➡️  the <output> is what the instructions end up actually receiving
   - (the `address` argument in your `JMP` instruction's `run(...)` function)
@@ -25,7 +25,7 @@ explain:
 letscode:
   messages:
   - actually I already coded some of these modes
-  - so you only have to implement "Relative" and "Indirect"
+  - so you'll only have to implement "Relative" and "Indirect"
   - you can grab the code from 📄  ~/docs/cpu/example_addressing_modes.js~ and continue from there!
   - 📚  implement the missing addressing modes
   - and export the object under the `addressingModes` key in 📄  ~/code/index.js~
