--- a/src/data/levels/003_CPU/016_Addressing modes (2-2)/chat/en.yml
+++ b/src/data/levels/003_CPU/016_Addressing modes (2-2)/chat/en.yml
@@ -2,10 +2,10 @@
 main:
   messages:
   - the indexed modes...
-  - time to implement them too
-  - take a look at the example pseudocode inside the documentation 👀
-  - you have to be careful and apply the proper `byte.toU8(...)` and `byte.toU16(...)` calls
-  - e.g. in the "Absolute,X" mode, if the <input> is $FFFF and [X] is 3, the <output> must be 2 (and not $10002)
+  - time to implement them as well
+  - take a look at the example pseudocode in the documentation 👀
+  - you have to be careful and apply the appropriate `byte.toU8(...)` and `byte.toU16(...)` calls
+  - e.g. in the "Absolute,X" mode, if the <input> is $FFFF and [X] is 3, the <output> must be $0002 (not $10002)
   - 📚  implement the missing modes!
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu/addressing_modes.en.md");
