--- a/src/data/levels/003_CPU/017_Operations/chat/en.yml
+++ b/src/data/levels/003_CPU/017_Operations/chat/en.yml
@@ -3,16 +3,16 @@ main:
   messages:
   - "\"opcode\" stands for \"operation code\""
   - so... what's an <operation>? 🤔
-  - it's the union of an 📖  <instruction> and an 📍  <addressing mode>
+  - it's the combination of an 📖  <instruction> and an 📍  <addressing mode>
   - "let's list some examples:"
   - |-
-    `STA $4080`: the `STA` instruction using the `ABSOLUTE` mode
+    `STA $4080`: the `STA` instruction + the `ABSOLUTE` mode
       => opcode $8D
   - |-
-    `STA $30,X`: the `STA` instruction with the `INDEXED_ABSOLUTE_X` mode
+    `STA $30,X`: the `STA` instruction + the `INDEXED_ABSOLUTE_X` mode
       => opcode $9D
   - |-
-    `STA ($55),Y`: the `STA` instruction with the `INDIRECT_INDEXED`
+    `STA ($55),Y`: the `STA` instruction + the `INDIRECT_INDEXED` mode
       => opcode $91
   responses:
   - that means `STA` can have different opcodes depending on the addressing mode? [multiple]
