--- a/src/data/levels/003_CPU/017_Operations/chat/es.yml
+++ b/src/data/levels/003_CPU/017_Operations/chat/es.yml
@@ -3,16 +3,16 @@ main:
   messages:
   - "\"opcode\" significa \"código de operación\""
   - entonces... ¿qué es una <operación>? 🤔
-  - es la unión entre una 📖  <instrucción> y un 📍  <modo de direccionamiento>
+  - es la combinación entre una 📖  <instrucción> y un 📍  <modo de direccionamiento>
   - "listemos algunos ejemplos:"
   - |-
-    `STA $4080`: la instrucción `STA` usando el modo `ABSOLUTE`
+    `STA $4080`: la instrucción `STA` + el modo `ABSOLUTE`
       => opcode $8D
   - |-
-    `STA $30,X`: la instrucción `STA` usando el modo `INDEXED_ABSOLUTE_X`
+    `STA $30,X`: la instrucción `STA` + el modo `INDEXED_ABSOLUTE_X`
       => opcode $9D
   - |-
-    `STA ($55),Y`: la instrucción `STA` usando el modo `INDIRECT_INDEXED`
+    `STA ($55),Y`: la instrucción `STA` + el modo `INDIRECT_INDEXED`
       => opcode $91
   responses:
   - ¿eso significa que `STA` puede tener diferentes opcodes dependiendo del modo de direccionamiento? [multiple]
