--- a/src/data/levels/000_Getting started/002_Architecture/chat/es.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/es.yml
@@ -31,7 +31,7 @@ thecode:
     {{Right}}.load("cartridge.png");
   messages:
   - ¡en el cartucho!
-  - específicamente, en un chip llamado PRG-ROM (Program ROM)
+  - específicamente, en un chip llamado 🤖  <PRG-ROM> (Program ROM)
   responses:
   - ...main
 
@@ -51,7 +51,7 @@ thegraphics:
     {{Right}}.load("cartridge.png");
   messages:
   - ¡en el cartucho! :)
-  - específicamente, en un chip llamado CHR-ROM (Character ROM)
+  - específicamente, en un chip llamado 👾  <CHR-ROM> (Character ROM)
   responses:
   - ...main
 
