--- a/src/data/levels/003_CPU/018_Execute (2-2)/chat/en.yml
+++ b/src/data/levels/003_CPU/018_Execute (2-2)/chat/en.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - let's implement our `step(...)` method The Right Way™️
-  - here, we'll read the correct arguments from <PRG-ROM>
+  - here, we'll read the correct arguments from 🤖  <PRG-ROM>
   - call the right <instruction> and <addressing mode>
   - and increment the cycle counters
   responses:
