--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "lodash": "^4.17.21",
     "marked": "^4.2.3",
     "mixpanel-browser": "^2.45.0",
-    "nes-emu": "^1.0.3",
+    "nes-emu": "^1.0.14",
     "npm": "^8.19.2",
     "path-browserify": "^1.0.1",
     "pixi-filters": "^4.2.0",
@@ -136,6 +136,7 @@
     "chai": "^4.3.6",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
+    "cursed-nes-emu": "^1.0.14",
     "electron": "6.0.12",
     "electron-builder": "21.2.0",
     "husky": "^1.3.1",
