--- a/src/data/levels/000_Getting started/002_Architecture/chat/es.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/es.yml
@@ -7,7 +7,7 @@ main:
   - bueno, aparentemente, esta cosa tiene 3 componentes principales, bastante independientes uno del otro
   - "estos son: 💻  CPU, 🖥️  PPU y 🔊  APU"
   - para poder jugar juegos, tienes que conectar dos piezas de hardware
-  - un cartucho (¡el juego mismo!) y un mando de 8 botones
+  - 💾  un cartucho (¡el juego mismo!) y 🎮  un mando de 8 botones
   responses:
   - 💻  cuéntame sobre la CPU [cpu]
   - 🖥️  cuéntame sobre la PPU [ppu]
@@ -41,6 +41,7 @@ ppu:
   messages:
   - es la Unidad de Procesamiento de Imagen
   - dibuja gráficos poniendo pixeles en la pantalla
+  - ¡en la magnífica resolución de 256x240!
   - y tiene acceso a un banco de 2 KiB de VRAM (Video RAM)
   responses:
   - ¿y dónde están almacenados esos gráficos? [thegraphics]
@@ -61,7 +62,8 @@ apu:
   messages:
   - es la Unidad de Procesamiento de Audio
   - maneja el sonido, produciendo ondas de audio
-  - todavía estoy aprendiendo sobre ésta
+  - como ondas cuadradas, triangulares, ruido e incluso muestras personalizadas
+  - emite un stream de 44100 muestras por segundo
   responses:
   - ...main
 
