--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "ringbufferjs": "^2.0.0",
     "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
     "updated-xterm-for-react": "5.0.0",
@@ -113,6 +114,7 @@
         ],
         "rules": {
           "import/no-anonymous-default-export": "off",
+          "import/no-webpack-loader-syntax": "off",
           "no-eval": "off",
           "no-control-regex": "off"
         }
@@ -136,13 +138,14 @@
     "chai": "^4.3.6",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
-    "cursed-nes-emu": "^1.0.14",
+    "cursed-nes-emu": "^1.999.0",
     "electron": "6.0.12",
     "electron-builder": "21.2.0",
     "husky": "^1.3.1",
     "mkdirp": "^1.0.4",
     "prettier": "2.2.1",
     "pretty-quick": "^1.10.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "worklet-loader": "^2.0.0"
   }
 }
