--- a/src/data/levels/000_Getting started/001_Quick tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Quick tutorial/chat/en.yml
@@ -40,8 +40,7 @@ turnontv:
     {{Right}}.load("monkey-conga.webp");
   messages:
   - there you go...
-  - "a clip of a popular NEEES game: \"Monkey Conga\""
-  - a weird story about a monkey kidnapping your girlfriend 🤨
+  - "a clip of a popular NEEES game: \"Conga\"" 🤨
   responses:
   - ...main
 
