--- a/src/data/levels/000_Getting started/001_Quick tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Quick tutorial/chat/es.yml
@@ -40,8 +40,7 @@ turnontv:
     {{Right}}.load("monkey-conga.webp");
   messages:
   - ahí tienes...
-  - "un video de un juego popular de NEEES: \"Monkey Conga\""
-  - una historia rara sobre un mono secuestrando a tu novia 🤨
+  - "un video de un juego popular de NEEES: \"Conga\"" 🤨
   responses:
   - ...main
 
