--- a/src/data/levels/02_Assembly language/01_Example program/chat/en.yml
+++ b/src/data/levels/02_Assembly language/01_Example program/chat/en.yml
@@ -33,7 +33,7 @@ skip:
     const book = store.getState().book.instance;
     const chapter = book.getChapterOf(level.id);
     const lastLevelId = _.last(chapter.levels).id;
-    const nextLevelId = book.nextIdOf(lastLevelId);
+    const nextLevelId = book.nextIdOf(lastLevelId, true);
     store.dispatch.savedata.advanceTo(nextLevelId);
   messages: []
   events:
