--- a/src/data/levels/04_Memory/01_CPU Memory/chat/es.yml
+++ b/src/data/levels/04_Memory/01_CPU Memory/chat/es.yml
@@ -32,7 +32,7 @@ io:
 implement:
   messages:
   - por ahora, solo vamos a implementar los dos primeros rangos del mapa de memoria
-  - 📚  crea una clase `CPUMemory` con un constructor
+  - 📚  crea una clase `CPUMemory` en 📄  ~/code/CPUMemory.js~ con un constructor
   - debería asignar una propiedad `ram` (un `Uint8Array` de 2048 bytes)
   - |-
     implementa estos dos métodos:
@@ -43,9 +43,7 @@ implement:
       -> caso contrario, retorna 0__
     **write(address, value)**:
       __-> similar a *read*, pero escribe el <value> en lugar de retornar__
-  - |-
-    luego, agrega al constructor de tu `CPU`:
-      ```javascript this.memory = new CPUMemory();```
+  - luego, como hiciste con `Cartridge`, agrega la clase a ~/code/index.js~
   responses:
   - necesito ayuda con los bytes espejados 📐 [help]
 
