Adding missing CPUMemory instance

--- a/src/data/levels/05a_CPU/02_Registers/chat/es.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/es.yml
@@ -44,8 +44,12 @@ nowwhat:
   - |-
     entonces, agrega el siguiente constructor a tu clase `CPU`:
       ```javascript
+      import CPUMemory from "/code/CPUMemory";
+      // ☝️ import memory
+      
       export default class CPU {
         constructor() {
+          this.memory = new CPUMemory();
           this.cycle = 0;
           this.extraCycles = 0;
 
