--- a/src/data/levels/05a_CPU/02_Registers/chat/en.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/en.yml
@@ -44,8 +44,12 @@ nowwhat:
   - |-
     then, add the following constructor to your `CPU` class:
       ```javascript
+      import CPUMemory from "/code/CPUMemory";
+      // ☝️ import memory
+
       export default class CPU {
         constructor() {
+          this.memory = new CPUMemory();
           this.cycle = 0;
           this.extraCycles = 0;
 
