Fixing broken emoji spacing

--- a/src/data/levels/05a_CPU/02_Registers/chat/es.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/es.yml
@@ -45,8 +45,8 @@ nowwhat:
     entonces, agrega el siguiente constructor a tu clase `CPU`:
       ```javascript
       import CPUMemory from "/code/CPUMemory";
-      // ☝️ import memory
-      
+      // ☝️  importar memoria
+
       export default class CPU {
         constructor() {
           this.memory = new CPUMemory();
