--- a/src/data/levels/03_Cartridge/02_CursedNEEES/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_CursedNEEES/chat/en.yml
@@ -1,20 +1,48 @@
 ---
 main:
+  run: |
+    level.launchEmulator();
+    set((m) => m.chat.winOnEnd = true);
   messages:
   - bet you don't know what I found
   - a working NEEES emulator!
-  - though \"working\" is a bit of a stretch 😅
+  - though "working" is a bit of a stretch 😅
   responses:
-  - it works or not? 🤨 [works]
+  - does it work or not? 🤨 [works]
 
 works:
   messages:
   - it fails in almost every aspect
   - tons of BUGS
-  - it's like the author was drunk or something
-  - I guess that's why they named it "CursedNEEES"
-  - you can try it anyway
+  - it's like the author was drunk or something 🙃 🔫
+  - I guess that's why they named it <CursedNEEES>
+  - you can try it anyway...
   - drag a rom into the TV or use one of my games
-  - I sent you a bunch of them, they are in 📁  ~/roms~
+  - I sent you a bunch of these, they are in 📁  ~/roms~
   - you can launch them with the `open` command
-  responses: []
+  responses:
+  - what bugs did you find? 🐞 [bugs]
+
+bugs:
+  messages:
+  - first, the 💾  Cartridge seems to start reading <CHR-ROM> bytes from the wrong byte, so all graphics look garbled
+  - the 💻  CPU timing is completely random (causing sync problems) and the `BIT` instruction randomly fails
+  - those CPU bugs also mess up the -already out of tune- 🔊  APU channels, so all sound is trash
+  - they didn't even map the 🎮  Controller correctly! it's mapped backwards and doesn't allow buttons A and B to be pressed simultaneously
+  - finally, the 🖥️  PPU adds screen noise, moves the scroll registers in a weird way, and draws sprites in the wrong position
+  - the 🧠  mappers work fine, fortunately 😅
+  responses:
+  - this is awful 👎 [awful]
+
+awful:
+  messages:
+  - I know, right?
+  - but there's a good thing about it
+  - its designed in a <modular> way
+  - so we can reuse its components ♻️
+  - that'll allow us to implement things in whatever order we want!
+  - you can start, for example, implementing the graphics (🖥️  PPU) and I'll patch your emulator so it uses the 💻  CPU, 🔊  APU, and 🎮  Controller from <CursedNEEES>
+  - and then continue fixing the other things at your pace
+  - let's fix the 💾  Cartridge first
+  responses:
+  - ▶️  continue [end]
