--- a/src/data/levels/03_Cartridge/02_CursedNEEES/chat/es.yml
+++ b/src/data/levels/03_Cartridge/02_CursedNEEES/chat/es.yml
@@ -1,6 +1,48 @@
 ---
 main:
-  run: level.launchEmulator();
+  run: |
+    level.launchEmulator();
+    set((m) => m.chat.winOnEnd = true);
   messages:
-  - coming soon!
-  responses: []
+  - a que no sabes lo que encontré
+  - ¡un emulador NEEES que funciona!
+  - aunque "funciona" es un poco exagerado 😅
+  responses:
+  - ¿funciona o no? 🤨 [works]
+
+works:
+  messages:
+  - falla en casi todos los aspectos
+  - montones de ERRORES
+  - es como si el autor hubiera estado borracho o algo así 🙃 🔫
+  - supongo que por eso lo llamaron <CursedNEEES>
+  - puedes probarlo de todos modos...
+  - arrastra una rom en la TV o usa uno de mis juegos
+  - te envié un montón de estos, están en 📁  ~/roms~
+  - puedes iniciarlos con el comando `open`
+  responses:
+  - ¿qué errores encontraste? 🐞 [bugs]
+
+bugs:
+  messages:
+  - primero, el 💾  Cartucho parece empezar a leer la <CHR-ROM> desde el byte incorrecto, por lo que todos los gráficos se ven distorsionados
+  - el timing de la 💻  CPU es completamente aleatorio (causando problemas de sincronización) y la instrucción `BIT` falla aleatoriamente
+  - esos errores de CPU también estropean los canales de la 🔊  APU (¡que ya estaban desafinados!), por lo que todo el sonido es basura
+  - ¡ni siquiera mapearon correctamente el 🎮  Mando! está mapeado al revés y no permite que los botones A y B se presionen simultáneamente
+  - finalmente, la 🖥️  PPU agrega ruido a la pantalla, mueve los registros de scrolling de una manera extraña y dibuja sprites en la posición incorrecta
+  - los 🧠  Mappers funcionan bien, afortunadamente 😅
+  responses:
+  - esto es horrible 👎 [awful]
+
+awful:
+  messages:
+  - sí, ¿no?
+  - pero tiene algo bueno
+  - está diseñado de manera <modular>
+  - así que podemos reutilizar sus componentes ♻️
+  - ¡eso nos permitirá implementar las cosas en el orden que queramos!
+  - podrías comenzar, por ejemplo, implementando los gráficos (🖥️  PPU) y yo parchearé tu emulador para que use la 💻  CPU, 🔊  APU y 🎮  Mando de <CursedNEEES>
+  - luego puedes seguir arreglando las otras cosas a tu ritmo
+  - vamos a arreglar el 💾  Cartucho primero
+  responses:
+  - ▶️  continuemos [end]
